--- a/paws4adoption_web/frontend/web/css/site.css
+++ b/paws4adoption_web/frontend/web/css/site.css
@@ -113,3 +113,14 @@ a.desc:after {
 .nav > li > form > button.logout:focus {
     outline: none;
 }
+
+/* css lista de animais */
+.divTitleButtonFilter{
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 20px;
+}
+.lineCard{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
