--- a/paws4adoption_mobile/app/src/main/res/layout/activity_organization.xml
+++ b/paws4adoption_mobile/app/src/main/res/layout/activity_organization.xml
@@ -7,4 +7,26 @@
     android:orientation="vertical"
     tools:context=".OrganizationActivity">
 
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="25dp" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="horizontal">
+
+        <Spinner
+            android:id="@+id/spinnerDistricts"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:dropDownWidth="wrap_content"
+            android:entries="@array/districtslist"
+            android:spinnerMode="dialog" />
+    </LinearLayout>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="25dp" />
 </LinearLayout>
