--- a/paws4adoption_web/frontend/web/css/site.css
+++ b/paws4adoption_web/frontend/web/css/site.css
@@ -124,3 +124,12 @@ a.desc:after {
     margin-top: 10px;
     margin-bottom: 10px;
 }
+.divInfoModel{
+    display: flex;
+}
+.divInfoModelSec{
+    flex: 1;
+}
+.pDate{
+    text-align: center;
+}
