chance btn Filter

--- a/paws4adoption_web/frontend/web/css/site.css
+++ b/paws4adoption_web/frontend/web/css/site.css
@@ -120,6 +120,10 @@ a.desc:after {
     justify-content: space-between;
     padding-bottom: 20px;
 }
+.btnFilter{
+    height: 40px;
+    align-self: center;
+}
 .lineCard{
     margin-top: 10px;
     margin-bottom: 10px;
