--- a/paws4adoption_web/frontend/web/css/site.css
+++ b/paws4adoption_web/frontend/web/css/site.css
@@ -137,3 +137,13 @@ a.desc:after {
 .pDate{
     text-align: center;
 }
+.divTab {
+    background-color: transparent!important;
+}
+.tabLink{
+    font-weight: bold;
+}
+.logoImg{
+    width: 700px;
+    margin: 20px auto;
+}
