--- a/paws4adoption_web/frontend/web/css/styles.scss
+++ b/paws4adoption_web/frontend/web/css/styles.scss
@@ -44,7 +44,7 @@ This files table contents are outlined below >>>>>
 $body-font-family: 'Nunito', sans-serif;
 $body-bg-color: #eeeef8;
 $template-text-color: #686c71;
-$primary-color: #2962ff;
+$primary-color: #c27333;
 $pragraph-color: #686c71;
 $heading-color: #212529;
 $border-color: #f6f6f7;
