PROJ-200 [BUG] upload images #done

--- a/paws4adoption_web/frontend/web/css/site.css
+++ b/paws4adoption_web/frontend/web/css/site.css
@@ -165,3 +165,9 @@ a.desc:after {
 .form-left-align{
     padding-left: 0px;
 }
+
+.image-animal{
+    object-fit: cover;
+    width: 100%;
+    height: 250px;
+}
