--- a/paws4adoption_web/frontend/web/css/site.css
+++ b/paws4adoption_web/frontend/web/css/site.css
@@ -41,7 +41,7 @@ a.asc:after, a.desc:after {
     position: relative;
     top: 1px;
     display: inline-block;
-    font-family: 'Glyphicons Halflings';
+    font-family: 'Glyphicons Halflings', serif;
     font-style: normal;
     font-weight: normal;
     line-height: 1;
@@ -170,4 +170,21 @@ a.desc:after {
     object-fit: cover;
     width: 100%;
     height: 250px;
+}
+
+.image-animal-grid{
+    object-fit: cover;
+    max-width: 200px !important;
+    max-height: 140px !important;
+}
+
+a.btn{
+    color: white !important;
+    width: 100px;
+    margin: 5%;
+}
+
+.table td, .table th{
+    text-align: center;
+    vertical-align: middle !important;
 }
