--- a/paws4adoption_web/frontend/web/css/site.css
+++ b/paws4adoption_web/frontend/web/css/site.css
@@ -122,6 +122,7 @@ a.desc:after {
 .btnFilter{
     height: 40px;
     align-self: center;
+    margin-inline-start: auto;
 }
 .lineCard{
     margin-top: 10px;
